PIP-289 Java 17 upgrade